<resources>
    <string name="app_name">FoodsApp</string>
    <string name="foods_app">Foods App</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="meal_name">Meal name</string>
    <string name="category_name">Category name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dot">...</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
</resources>